# sudoku

./: .gitignore  README.md  pyproject.toml
src/sudoku_solver/: __init__.py  gui.py  io.py  solver.py
tests/: test_io.py  test_solver.py
